<resources>
    <string name="app_name">Find Bank</string>
    <string name="e_mail">E-mail:</string>
    <string name="password">Password</string>
    <string name="ingresar">Ingresar</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_tiene_una_cuenta">¿No tienes una cuenta?  </string>
    <string name="registrarse"><u>Registrate</u> </string>
    <string name="register">Solicita tu registro</string>
    <string name="nameRegister">Nombre completo:</string>
    <string name="emailRegister">Email:</string>
    <string name="passwordRegister">Contraseña:</string>
    <string name="passwordRegisterAgain">Confirmar contraseña:</string>
    <string name="finalRegister">Finalizar Registro</string>
    <string name="requerido">Campo requerido</string>
    <string name="title_activity_home">Find Bank Maps</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Nosotros</string>
    <string name="nosotros">Somos un grupo de jovenes programadores:
        \n- Linder Hassinger \n- Seichi Honda \n- Roque Alarcon</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="email_of_user">Email of user</string>
    <string name="title_activity_display_message">Back</string>
    <string name="nombre_de_agente">Nombre de agente</string>
    <string name="direccion_de_agente">Direccion de agente</string>
    <string name="sistema">Sistema:</string>
    <string name="no_disponible">No disponible</string>
    <string name="seguridad">Seguridad de la zona: </string>
    <string name="horario">Horario:</string>
    <string name="_8_00am_6_00pm">8:00am - 6:00pm</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <string name="error_completar_campos">Completar todos los campos!</string>
    <string name="error_caracteres_numericos">No se permiten caracteres numéricos en el nombre!</string>
    <string name="error_contraseña_demasiado_corta">La contraseña es demasiado corta!</string>
    <string name="error_ingresar_correo_valido">Ingresar un correo valido!</string>
    <string name="error_contraseñas_diferentes">Las contraseña deben ser iguales!</string>
    <string name="error_correo_contraseña_incorrectos">Correo o contraseña incorrectos!</string>

    <string name="nombre">Nombre:</string>
    <string name="si">Operativo</string>
    <string name="no">Fuera de Servicio</string>
    <string name="actualizar">Actualizar</string>
    <string name="direccion">Direccion</string>
    <string name="nombreshow">Nombre</string>
    <string name="informar_de_un_cambio">Informar de un Cambio</string>

    <string name="si_tiene_sistema">Si tiene sistema</string>
    <string name="no_tiene_sistema">No tiene sistema</string>

    <string name="agregado_a_favoritos">Agregado a favoritos</string>
    <string name="eliminado_de_favoritos">Eliminado de favoritos</string>

</resources>
