<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/bg_fondo"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <RelativeLayout
        android:gravity="center"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.linderhassinger.proyecto_integrador.RegisterActivity">

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/titleRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:gravity="center"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="35sp"
                android:layout_margin="12dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:id="@+id/campos"
            android:orientation="vertical"
            android:layout_below="@id/titleRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/nameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:inputType="text"
                    android:theme="@style/EditTextWhite"
                    android:textSize="19dp"
                    android:hint="@string/nameRegister"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/emailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:theme="@style/EditTextWhite"
                    android:inputType="textEmailAddress"
                    android:hint="@string/emailRegister"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/passwordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:theme="@style/EditTextWhite"
                    android:inputType="textPassword"
                    android:hint="@string/passwordRegister"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/passwordRegisteragain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:theme="@style/EditTextWhite"
                    android:inputType="textPassword"
                    android:hint="@string/passwordRegisterAgain"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="52dp"
            android:gravity="center"
            android:layout_below="@id/campos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/finalRegister"
                android:layout_width="250dp"
                android:layout_margin="12dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_sig_in"
                android:text="@string/finalRegister"
                android:textColor="#fff"
                android:textAllCaps="false"
                android:textSize="18sp"/>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>