<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/bg_fondo"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_fondo"
        tools:context="com.linderhassinger.proyecto_integrador.LoginActivity">

        <LinearLayout
            android:id="@+id/logobcp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="52dp"
            android:layout_marginTop="30dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="16dp"
                android:onClick="SignIn"
                android:src="@drawable/find"
                tools:ignore="ContentDescription" />

        </LinearLayout>
        <LinearLayout
            android:layout_below="@+id/logobcp"
            android:id="@+id/LinearLogin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5dp"
            android:layout_alignParentStart="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/logobcp">

            <EditText
                android:id="@+id/txtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="25dp"
                android:ems="10"
                android:drawablePadding="8dp"
                android:drawableLeft="@drawable/ic_mail"
                android:theme="@style/EditTextWhite"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textInputLayout1">

            <EditText
                android:id="@+id/txtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtCorreo"
                android:drawableLeft="@drawable/ic_lock"
                android:layout_margin="25dp"
                android:ems="10"
                android:drawablePadding="8dp"
                android:textColorHint="@color/colorAccent"
                android:theme="@style/EditTextWhite"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout2"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_button_sig_in"
            android:text="@string/ingresar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold" />



        </LinearLayout>
        <LinearLayout
            android:layout_below="@id/LinearLogin"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_tiene_una_cuenta"
                android:gravity="center"
                android:textStyle="normal"
                android:textSize="16sp"
                android:textColor="#fff"/>

            <Button
                android:id="@+id/btnregister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrarse"
                android:textAllCaps="false"
                android:background="@drawable/bg_transparent"
                android:textColor="#fff"
                android:textSize="19dp"/>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
