<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.linder.find_bank.activities.DetalleBancoActivity">

        <RelativeLayout
            android:id="@+id/containerBg"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/bg_agente">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <ImageView
                    android:id="@+id/btnClose"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginEnd="0dp"
                    android:background="#53292929"
                    android:src="@drawable/ic_close" />
            </LinearLayout>

            <com.like.LikeButton
                android:id="@+id/btn_favorite"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="#fff"
                app:icon_size="25dp"
                app:icon_type="heart" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="05dp"
                android:layout_marginTop="120dp"
                android:background="#53292929"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nombreAgente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="6dp"
                    android:gravity="left"
                    android:text="@string/nombre_de_agente"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/direccionAgente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="6dp"
                    android:gravity="left"
                    android:text="@string/direccion_de_agente"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/containerDe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/containerBg"
            android:background="@drawable/bg_edit_text"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:gravity="center"
                android:text="Detalles"
                android:textColor="#2e9fd7"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:text="@string/sistema"
                        android:textColor="#000"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:text="@string/seguridad"
                        android:textColor="#000"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/sistema"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:background="#40c151"
                        android:gravity="center"
                        android:text="Si"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <RatingBar
                        android:id="@+id/clalificacionAgente"
                        style="@style/Base.Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:elevation="4dp"
                        android:numStars="5"
                        android:progressBackgroundTint="@color/colorPrimary"
                        android:progressBackgroundTintMode="multiply"
                        android:rating="4"
                        android:theme="@style/RatingBar" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/containerDe"
            android:background="@drawable/bg_edit_text"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:gravity="center"
                android:text="Adicional"
                android:textColor="#2e9fd7"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="12dp"
                    android:text="Tipo: "
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tipo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="12dp"
                    android:text="Tipo"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="12dp"
                    android:text="@string/horario"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/horaA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="12dp"
                    android:text="@string/_8_00am_6_00pm"
                    android:textColor="#000"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/editarAgent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:background="@drawable/bg_button_register"
                    android:padding="7dp"
                    android:text="@string/informar_de_un_cambio"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>